force-app/main/default/objects/C_Form_Target__c/C_Form_Target__c.object-meta.xml
<CustomObject>
    <description>Target record configuration for a form - defines which Salesforce object to create/update when a form is submitted, including record resolution strategy</description>
    <label>Form Target</label>
    <nameField>
        <displayFormat>FT-{0000}</displayFormat>
        <label>Form Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>