force-app/main/default/objects/C_Form_Target__c/fields/C_Context_Key__c.field-meta.xml
<CustomField>
    <fullName>C_Context_Key__c</fullName>
    <description>Unique key used to match this target to a record ID in the recordContext JSON map passed by the caller. Example: "primaryAccount", "vendorContact".</description>
    <inlineHelpText>A unique key that callers (LWC, Flow) use to pass the correct record ID for this target via the recordContext parameter.</inlineHelpText>
    <label>Context Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>