force-app/main/default/objects/C_Form_Target__c/fields/C_Description__c.field-meta.xml
<CustomField>
    <fullName>C_Description__c</fullName>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>