force-app/main/default/objects/C_Form_Target__c/fields/C_Direction__c.field-meta.xml
<CustomField>
    <fullName>C_Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <description>Determines the data flow direction for this target: Outbound (form to record), Inbound (record to form), or Bidirectional (both).</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
                <default>true</default>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Bidirectional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>