force-app/main/default/objects/C_Form_Target__c/fields/C_Form__c.field-meta.xml
<CustomField>
    <fullName>C_Form__c</fullName>
    <label>Form</label>
    <referenceTo>C_Form__c</referenceTo>
    <relationshipLabel>Form Targets</relationshipLabel>
    <relationshipName>C_Form_Targets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>