force-app/main/default/objects/C_Form_Target__c/fields/C_Order__c.field-meta.xml
<CustomField>
    <fullName>C_Order__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>