force-app/main/default/objects/C_Form_Target__c/fields/C_Record_Operation__c.field-meta.xml
<CustomField>
    <fullName>C_Record_Operation__c</fullName>
    <label>Record Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Update</fullName><default>true</default><label>Update</label></value>
            <value><fullName>Create</fullName><default>false</default><label>Create</label></value>
            <value><fullName>Upsert</fullName><default>false</default><label>Upsert</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>