force-app/main/default/objects/C_Form_Target__c/fields/C_Related_Field_Path__c.field-meta.xml
<CustomField>
    <fullName>C_Related_Field_Path__c</fullName>
    <description>For Related_Record resolution: the lookup/relationship field on the source target's object that points to this target's record. Example: if source target resolved an Account, and this field is "Primary_Contact__c", the system queries Account.Primary_Contact__c to find this target's Contact ID.</description>
    <inlineHelpText>Field on the source target's object that points to this target's record. E.g. "Primary_Contact__c" on Account.</inlineHelpText>
    <label>Related Field Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>