force-app/main/default/objects/C_Form_Target__c/fields/C_Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>C_Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Record_Context</fullName><default>true</default><label>Record Context</label></value>
            <value><fullName>Running_User</fullName><default>false</default><label>Running User</label></value>
            <value><fullName>Related_Record</fullName><default>false</default><label>Related Record</label></value>
            <value><fullName>New</fullName><default>false</default><label>Create New Record</label></value>
            <value><fullName>Running_User_Account</fullName><default>false</default><label>Running User Account (Legacy)</label></value>
            <value><fullName>Running_User_Contact</fullName><default>false</default><label>Running User Contact (Legacy)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>