force-app/main/default/objects/C_Form_Target__c/fields/C_User_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>C_User_Lookup_Field__c</fullName>
    <description>For Running_User resolution: the field path on the User object that resolves to the target record ID. Examples: "Contact.AccountId" (community user Account), "ContactId" (community user Contact), "AccountId" (partner user Account).</description>
    <inlineHelpText>User object field path to resolve the record. E.g. "Contact.AccountId" for community users, "ContactId" for portal users.</inlineHelpText>
    <label>User Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>